--- a/三种远程链接的方法，端口映射和内网穿透.md
+++ b/三种远程链接的方法，端口映射和内网穿透.md
@@ -56,4 +56,4 @@
     ssh -p 21525 up70@frp-mix.com
 21525 是端口名字可以更改不固定
  ！[](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20210505.png)
-    最后有其他问题可以参考文档 ！[](https://doc.natfrp.com/launcher/usage.html)
+    最后有其他问题可以参考 [文档](https://doc.natfrp.com/launcher/usage.html 
