--- a/三种远程链接的方法，端口映射和内网穿透.md
+++ b/三种远程链接的方法，端口映射和内网穿透.md
@@ -3,12 +3,12 @@
 
 ## 1.Rustdesk
 
-### （1)输入网址下载rustdesk
+### (1)输入网址下载rustdesk
 
 [RustDesk：开源远程桌面与自建服务器解决方案](https://rustdesk.com/zh-cn/)
 
-### （2)打开软件并输入要远程链接的电脑的ID
-![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20214810.png
+### (2)打开软件并输入要远程链接的电脑的ID
+![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20214810.png)
 
 
 ## 2.vscode远程链接
@@ -16,7 +16,7 @@
 ### （1）打开vscode
 
 ### （2）在拓展中下载插件remote-ssh：图像中的第一个
-(https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20215228.png
+(https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20215228.png)
 
 ### （3）打开远程资源管理器并选择SSh
 (https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20215351.png
