--- a/三种远程链接的方法，端口映射和内网穿透.md
+++ b/三种远程链接的方法，端口映射和内网穿透.md
@@ -16,13 +16,13 @@
 ### （1）打开vscode
 
 ### （2）在拓展中下载插件remote-ssh：图像中的第一个
-(https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20215228.png)
+![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20215228.png)
 
 ### （3）打开远程资源管理器并选择SSh
-(https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20215351.png
+![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20215351.png)
 
 ### （4）点击SSH右边的+号并在框中输入要链接的“拟机名字@IP地址”然后选择配置文件的地址（一般选第一个），密钥就是虚拟机的密码。
-(https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20220020.png
+![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-02-26%20220020.png)
 
 ## 3.在Ubuntu终端上使用openssh
 
@@ -41,19 +41,19 @@
 
 ## 4.端口映射与内网穿透
 
-### （1）打开网址 ！[樱花内网穿透](https://www.natfrp.com/user/)注册账号并下载软件后点击服务下的隧道列表创建隧道
-(https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20203303.png
+### （1）打开网址 [樱花内网穿透](https://www.natfrp.com/user/)注册账号并下载软件后点击服务下的隧道列表创建隧道
+![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20203303.png)
 
 ### （2）隧道类型选择TCP、隧道名、备注、本地端口选择22，且要使用蓝色部分进行访问
-(https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20203557.png
+![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20203557.png)
 
-(https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20205621.png
+![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20205621.png)
 
-如有疑惑可参考视频 ！[链接](https://www.bilibili.com/video/BV1BE421T7Ep/?spm_id_from=333.337.search-card.all.click&vd_source=9f4e89570777bf3a283906047bfeab77
+如有疑惑可参考视频 ！[链接](https://www.bilibili.com/video/BV1BE421T7Ep/?spm_id_from=333.337.search-card.all.click&vd_source=9f4e89570777bf3a283906047bfeab77)
 (这两部分可以不搞)
 
 ### （3）主要是ssh 链接问题输入
     ssh -p 21525 up70@frp-mix.com
 21525 是端口名字可以更改不固定
- ！[](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20210505.png)
-    最后有其他问题可以参考 [文档](https://doc.natfrp.com/launcher/usage.html 
+![](https://github.com/hucy8325/my-image-repo/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-03-01%20210505.png)
+    最后有其他问题可以参考 [文档](https://doc.natfrp.com/launcher/usage.html)
