--- a/三种远程链接的方法，端口映射和内网穿透.md
+++ b/三种远程链接的方法，端口映射和内网穿透.md
@@ -26,7 +26,7 @@
 
 ## 3.在Ubuntu终端上使用openssh
 
-### （1）在终端上下在openssh
+### （1）在终端上下载openssh
     sudo apt update
     sudo apt install openssh-server
     sudo systemctl start ssh #启动
